--- a/index.html
+++ b/index.html
@@ -286,27 +286,60 @@
       </section>
 
       <!-- Изображения происходящего -->
-      <section>
-        <div>
-          <h2></h2>
-          <div>
-            <div>
-              <img src="" alt="">
-              <p></p>
+      <section id="how-going-gallery" class="py-5">
+        <div class="m-auto">
+          <h2 class="heading text-uppercase text-center mb-5">Как всё происходит</h2>
+            <div class="row justify-content-center">
+              <div class="col-11 col-md-4">
+                <a data-animation-effect="zoom-in-out" data-transition-effect="slide"
+                  href="./img/first-class-stylish-help-chat-1.jpg" data-fancybox="images"
+                  data-caption="Клиентка просит стилиста помочь выбрать одну из курток милитари">
+                  <img class="w-100" src="./img/first-class-stylish-help-chat-1.jpg" alt="">
+                </a>
+              </div>
+              <div class="col-11 col-md-6 d-flex align-items-center">
+                <p class="description">Клиентка просит стилиста помочь выбрать одну из курток милитари</p>
+              </div>
             </div>
-            <div>
-              <img src="" alt="">
-              <p></p>
+
+            <div class="row justify-content-center">
+              <div class="col-11 col-md-4">
+                <a data-animation-effect="zoom-in-out" data-transition-effect="slide"
+                  href="./img/first-class-stylish-help-chat-2.jpg" data-fancybox="images"
+                  data-caption="Стилист просит дополнительные фотографии для того, чтобы выбор был 100% удачным">
+                  <img class="w-100" src="./img/first-class-stylish-help-chat-2.jpg" alt="">
+                </a>
+              </div>
+              <div class="col-11 col-md-6 d-flex align-items-center">
+                <p class="description"> Стилист просит дополнительные фотографии для того, чтобы выбор был 100% удачным</p>
+              </div>
             </div>
-            <div>
-              <img src="" alt="">
-              <p></p>
+
+            <div class="row justify-content-center">
+              <div class="col-11 col-md-4">
+                <a data-animation-effect="zoom-in-out" data-transition-effect="slide"
+                  href="./img/first-class-stylish-help-chat-3.jpg" data-fancybox="images"
+                  data-caption="Стилист анализирует с учетом  уже имеющихся вещей клиентки и помогает сделать правильный выбор">
+                  <img class="w-100" src="./img/first-class-stylish-help-chat-3.jpg" alt="">
+                </a>
+              </div>
+              <div class="col-11 col-md-6 d-flex align-items-center">
+                <p class="description">Стилист анализирует с учетом уже имеющихся вещей клиентки и помогает сделать правильный выбор</p>
+              </div>
             </div>
-            <div>
-              <img src="" alt="">
-              <p></p>
+
+            <div class="row justify-content-center">
+              <div class="col-11 col-md-4">
+                <a data-animation-effect="zoom-in-out" data-transition-effect="slide"
+                  href="./img/first-class-stylish-help-chat-4.jpg" data-fancybox="images"
+                  data-caption="Благодарная клиентка делиться впечатлениями от полученной услуги и радостью удачных покупок">
+                  <img class="w-100" src="./img/first-class-stylish-help-chat-4.jpg" alt="">
+                </a>
+              </div>
+              <div class="col-11 col-md-6 d-flex align-items-center">
+                <p class="description">Благодарная клиентка делиться впечатлениями от полученной услуги и радостью удачных покупок</p>
+              </div>
             </div>
-          </div>
         </div>
       </section>
     </main>
