Отключиь перенос текста

--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
           <!-- Номера телефонов -->
           <div class="tel_number text-right col-lg-2 col">
             <p>
-              <a href="#" class="text-light">8(800)707-05-13</a>
+              <a href="#" class="text-light text-nowrap">8(800)707-05-13</a>
             </p>
             <p>
-              <a href="#" class="text-light">+7(499)350-23-35</a>
+              <a href="#" class="text-light text-nowrap">+7(499)350-23-35</a>
             </p>
           </div>
         </div>
